--- a/MoviesLibrary.ClientApp/MoviesLibrary.ClientApp.csproj
+++ b/MoviesLibrary.ClientApp/MoviesLibrary.ClientApp.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.0.0-alpha0660" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="OmdbRest" Version="1.0.31" />
   </ItemGroup>
 
@@ -19,7 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
