Add Pagination system + search view with year option

--- a/MoviesLibrary.ClientApp/MoviesLibrary.ClientApp.csproj
+++ b/MoviesLibrary.ClientApp/MoviesLibrary.ClientApp.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Framework.MVVM\Framework.MVVM.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
 </Project>
